// Vitest Snapshot v1

exports[`math/Matrix4 > can accept args 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
]
`;

exports[`math/Matrix4 > can be set from orthogonal 1`] = `
Matrix4 [
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  -0.20000000298023224,
  0,
  -0,
  -0,
  -1,
  1,
]
`;

exports[`math/Matrix4 > can be set from orthogonal 2`] = `
Matrix4 [
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  -0.10000000149011612,
  0,
  -0,
  -0,
  -0,
  1,
]
`;

exports[`math/Matrix4 > can be set from perspective 1`] = `
Matrix4 [
  Infinity,
  0,
  0,
  0,
  0,
  1.7320507764816284,
  0,
  0,
  0,
  0,
  -1.0202020406723022,
  -1,
  0,
  0,
  -0.20202019810676575,
  0,
]
`;

exports[`math/Matrix4 > can be set from perspective 2`] = `
Matrix4 [
  Infinity,
  0,
  0,
  0,
  0,
  1.7320507764816284,
  0,
  0,
  0,
  0,
  -1.0101009607315063,
  -1,
  0,
  0,
  -0.10101009905338287,
  0,
]
`;

exports[`math/Matrix4 > can clone itself 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
]
`;

exports[`math/Matrix4 > can compose from a set of properties 1`] = `
[
  1,
  8.742277657347586e-8,
  -8.742279078433057e-8,
  0,
  -8.742279078433057e-8,
  1,
  -8.74227694680485e-8,
  0,
  8.742277657347586e-8,
  8.742278367890322e-8,
  1,
  0,
  1,
  2,
  3,
  1,
]
`;

exports[`math/Matrix4 > can copy a matrix 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
]
`;

exports[`math/Matrix4 > can decompose to a set of properties 1`] = `
[
  0,
  0,
  0,
]
`;

exports[`math/Matrix4 > can decompose to a set of properties 2`] = `
[
  0,
  0,
  0,
  1,
]
`;

exports[`math/Matrix4 > can decompose to a set of properties 3`] = `
[
  1,
  1,
  1,
]
`;

exports[`math/Matrix4 > can lookAt a set of vectors 1`] = `
Matrix4 [
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  5,
  1,
]
`;

exports[`math/Matrix4 > can multiply a matrix 1`] = `
[
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
]
`;

exports[`math/Matrix4 > can multiply a scalar 1`] = `
[
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
]
`;

exports[`math/Matrix4 > can rotate along an axis 1`] = `
[
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`math/Matrix4 > can scale from a vector 1`] = `
[
  2,
  0,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  0,
  2,
  0,
  0,
  0,
  0,
  1,
]
`;
